--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "norfs"
 version = "0.0.0"
 edition = "2021"
 description = "Wear-leveling filesystem for embedded systems"
-license = "MIT or Apache-2.0"
+license = "MIT OR Apache-2.0"
 repository = "https://github.com/card-io-ecg/norfs"
 categories = ["embedded", "no-std", "filesystem"]
 keywords = ["embedded", "no-std", "filesystem", "flash"]
