--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ keywords = ["embedded", "no-std", "filesystem", "flash"]
 [dependencies]
 critical-section = { version =  "1.1", optional = true }
 embassy-futures = { version = "0.1.0" }
+embedded-io = { version = "0.4.0", features = ["async"], optional = true }
 heapless = "0.7"
 log = "0.4"
 
@@ -21,6 +22,8 @@ async-std = { version = "1", features = ["attributes"] }
 simple_logger = "4.1"
 
 [features]
+default = ["embedded-io"]
 internal-flash = ["esp32s3"]
 esp32s3 = ["internal-flash"]
 critical-section = ["dep:critical-section"]
+embedded-io = ["dep:embedded-io"]
