--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -29,14 +29,19 @@ jobs:
 
     - uses: actions-rs/cargo@v1
       with:
-        command: clippy
+        command: check
 
     - uses: actions-rs/cargo@v1
       with:
         command: check
-        args: --verbose
+        args: --features=defmt
+
+    - uses: actions-rs/cargo@v1
+      with:
+        command: clippy
+        args: --features=defmt
 
     - uses: actions-rs/cargo@v1
       with:
         command: test
-        args: --verbose
+        args: --features=log
