--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,8 @@ critical-section = { version =  "1.1", optional = true }
 embassy-futures = { version = "0.1.0" }
 embedded-io = { version = "0.4.0", features = ["async"] }
 heapless = "0.7"
-log = "0.4"
+log = { version = "0.4", optional = true }
+defmt = { version = "0.3.5", optional = true }
 
 [dev-dependencies]
 async-std = { version = "1", features = ["attributes"] }
@@ -26,3 +27,5 @@ default = []
 internal-flash = ["esp32s3"]
 esp32s3 = ["internal-flash"]
 critical-section = ["dep:critical-section"]
+defmt = ["dep:defmt"]
+log = ["dep:log"]
