--- a/norfs/Cargo.toml
+++ b/norfs/Cargo.toml
@@ -11,8 +11,8 @@ keywords = ["embedded", "no-std", "filesystem", "flash"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-critical-section = { version =  "1.1", optional = true }
-embassy-futures = { version = "0.1.0" }
+norfs-driver = { path = "../norfs-driver" }
+
 embedded-io = { version = "0.4.0", features = ["async"] }
 heapless = "0.7"
 log = { version = "0.4", optional = true }
@@ -24,9 +24,6 @@ simple_logger = "4.1"
 
 [features]
 default = ["alloc"]
-internal-flash = ["esp32s3"]
-esp32s3 = ["internal-flash"]
-critical-section = ["dep:critical-section"]
-defmt = ["dep:defmt"]
-log = ["dep:log"]
+defmt = ["dep:defmt", "norfs-driver/defmt"]
+log = ["dep:log", "norfs-driver/log"]
 alloc = []
