--- a/norfs-esp32s3/Cargo.toml
+++ b/norfs-esp32s3/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+embassy-futures = "0.1.0"
 norfs-driver = { path = "../norfs-driver" }
 
 critical-section = { version =  "1.1", optional = true }
