--- a/norfs/Cargo.toml
+++ b/norfs/Cargo.toml
@@ -13,7 +13,7 @@ keywords = ["embedded", "no-std", "filesystem", "flash"]
 [dependencies]
 norfs-driver = { path = "../norfs-driver" }
 
-embedded-io = { version = "0.4.0", features = ["async"] }
+embedded-io-async = { version = "0.6.0" }
 heapless = "0.7"
 log = { version = "0.4", optional = true }
 defmt = { version = "0.3.5", optional = true }
