--- a/norfs/Cargo.toml
+++ b/norfs/Cargo.toml
@@ -14,7 +14,8 @@ keywords = ["embedded", "no-std", "filesystem", "flash"]
 norfs-driver = { path = "../norfs-driver" }
 
 embedded-io-async = { version = "0.6.0" }
-heapless = "0.7"
+heapless07 = { package = "heapless", version = "0.7" }
+heapless08 = { package = "heapless", version = "0.8" }
 log = { version = "0.4", optional = true }
 defmt = { version = "0.3.5", optional = true }
 
