--- a/norfs/Cargo.toml
+++ b/norfs/Cargo.toml
@@ -2,6 +2,7 @@
 name = "norfs"
 version = "0.0.0"
 edition = "2021"
+rust-version = "1.84.0"
 description = "Wear-leveling filesystem for embedded systems"
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/card-io-ecg/norfs"
